ITOPS-424 bring Server templates up-to-date

--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -11,6 +11,9 @@ Metadata:
           default: Confluence setup
         Parameters:
           - ConfluenceVersion
+      - Label:
+          default: Deployment information
+        Parameters:
           - DeployEnvironment
       - Label:
           default: Instance parameters
@@ -35,7 +38,7 @@ Metadata:
           - ExternalSubnets
           - InternalSubnets
           - KeyName
-          - SSLCertificateName
+          - SSLCertificateARN
           - VPC
       - Label:
           default: DNS (Optional)
@@ -141,8 +144,8 @@ Metadata:
         default: Key Name *
       LoadBalancerScheme:
         default: Load Balancer Scheme
-      SSLCertificateName:
-        default: SSL Certificate Name
+      SSLCertificateARN:
+        default: SSL Certificate ARN
       SubDomainName:
         default: Sub-domain for Hosted Zone (optional)
       TomcatAcceptCount:
@@ -270,7 +273,7 @@ Parameters:
     Type: String
   DBIdleTestPeriod:
     Default: 0
-    Description: If this is a number greater than 0, c3p0 will test all idle, pooled but unchecked-out connections, every this number of seconds
+    Description: If greater than 0, this is the frequency (in seconds) that c3po will test all idle, pooled but unchecked-out connections.
     Type: String
   DBMaxStatements:
     Default: 0
@@ -316,7 +319,7 @@ Parameters:
     Type: String
   ExternalSubnets:
     Default: ''
-    ConstraintDescription: Must be a list of two or more Subnet ID's within the selected VPC.
+    ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
     Description: Subnets (two or more) where your user-facing load balancer will be deployed. MUST be within the selected VPC.
     Type: List<AWS::EC2::Subnet::Id>
   HostedZone:
@@ -400,7 +403,7 @@ Parameters:
     Type: Number
   InternalSubnets:
     Default: ''
-    ConstraintDescription: Must be a list of two or more Subnet ID's within the selected VPC.
+    ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
     Description: Subnets (two or more) where your EC2 instance and other internal infrastructure will be deployed. MUST be within the selected VPC.
     Type: List<AWS::EC2::Subnet::Id>
   JvmHeapOverrideConfluence:
@@ -428,11 +431,11 @@ Parameters:
     Default: ''
     Description: Leave this field blank to use your stack name as the sub-domain.
     Type: String
-  SSLCertificateName:
+  SSLCertificateARN:
     Default: ''
-    Description: The name of your Server Certificate to use for HTTPS.  Leave blank if you don't want to set up HTTPS at this time
+    Description: Amazon Resource Name (ARN) of your SSL certificate. If you want to use your own certificate that you generated outside of Amazon, you need to first import it to AWS Certificate Manager. After a successful import, you'll receive the ARN. If you want to create a certificate with AWS Certificate Manager (ACM certificate), you will receive the ARN after it's successfully created.
     MinLength: 0
-    MaxLength: 50
+    MaxLength: 90
     Type: String
   StartCollectd:
     Default: true
@@ -481,7 +484,7 @@ Parameters:
     Type: String
   TomcatRedirectPort:
     Default: 8443
-    Description: For a non-ssl conenctor actioning a redirect to ssl URI, Catalina will automatically redirect the request to the port number specified here
+    Description: The port number for Catalina to use when automatically redirecting a non-SSL connector actioning a redirect to a SSL URI
     Type: String
   TomcatScheme:
     Default: http
@@ -507,7 +510,7 @@ Conditions:
   DoSetDBMasterUserPassword:
     !Not [!Equals [!Ref DBMasterUserPassword, '']]
   DoSSL:
-    !Not [!Equals [!Ref SSLCertificateName, '']]
+    !Not [!Equals [!Ref SSLCertificateARN, '']]
   SSLScheme:
     !Equals [!Ref TomcatScheme, 'https']
   OverrideConfluenceHeap:
@@ -775,6 +778,8 @@ Resources:
             Principal:
               Service: [ec2.amazonaws.com]
             Action: ['sts:AssumeRole']
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
       Path: /
       Policies:
         - PolicyName: ConfluenceServerPolicy
@@ -846,8 +851,10 @@ Resources:
                   collectd-rrdtool: []
                   collectd-disk: []
                   inotify-tools: []
+                  amazon-ssm-agent: []
                   xmlstarlet: []
                 - inotify-tools: []
+                  amazon-ssm-agent: []
                   xmlstarlet: []
           files:
             /etc/atl:
@@ -1073,7 +1080,7 @@ Resources:
         - CertificateArn:
             !If
               - DoSSL
-              - !Sub "arn:aws:iam::${AWS::AccountId}:server-certificate/${SSLCertificateName}"
+              - !Ref SSLCertificateARN
               - !Ref AWS::NoValue
       DefaultActions:
         - Type: forward
