ITOPS-699 test forge url

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -34,6 +34,7 @@ pipelines:
               - aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.' | grep StackName | grep Backmac
               # did forge come up ?
               - export FORGEURL=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Forge"))|.StackName')
+              - echo $FORGEURL
               - curl --fail ${FORGEURL}/status
         - step:
             name: Cleanup Atlassian Services Stack
