--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,7 +19,7 @@ pipelines:
               - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
               #- cd ami
               #- ./bin/build-ami.sh -p JIRA      -r us-east-1 -v ${CI_VPC_ID} -s ${CI_SUBNET_ID} -c
-              # tests to determine state
+              # test to determine MASTERSTACK
               - export MASTERSTACK=$(aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE UPDATE_COMPLETE | jq '.StackSummaries'|jq -r '.[]| select(.TemplateDescription=="Master Template for Atlassian Services")|.StackName')
               - if [ -x "${MASTERSTACK}"]; then MASTERSTACK="ATL";fi
               - echo $MASTERSTACK
@@ -35,24 +35,29 @@ pipelines:
               - aws cloudformation validate-template --template-url https://s3.amazonaws.com/${CI_S3_OUTPUT_BUCKET}/quickstarts/quickstart-forge-for-atlassian-services.yaml
               - if [ ! -e "vpcExists" ]; then aws cloudformation create-stack --stack-name "${MASTERSTACK}" --template-url https://s3.amazonaws.com/${CI_S3_OUTPUT_BUCKET}/quickstarts/quickstart-for-atlassian-services.yaml --capabilities CAPABILITY_IAM --on-failure DELETE --parameters  file://ci-parameters-services-stack.json --tags "Key=Name,Value=ITOPS-CI" "Key=service_name,Value=ITOPS-CI" "Key=business_unit,Value=${BUSINESS_UNIT}" "Key=resource_owner,Value=${RESOURCE_OWNER}"; fi
               - if [ ! -e "vpcExists" ]; then aws cloudformation wait stack-create-complete --stack-name "${MASTERSTACK}"; fi
+              # tests to determine MASTERSTASCK state
+              - export BACKMACENABLED=$(aws cloudformation describe-stacks --stack-name="${MASTERSTACK}"|jq '.Stacks[0].Parameters' | jq '.[] | select(.ParameterKey=="EnableBackmac")|.ParameterValue')
+              - echo $BACKMACENABLED
+              - export FORGEENABLED=$(aws cloudformation describe-stacks --stack-name="${MASTERSTACK}"|jq '.Stacks[0].Parameters' | jq '.[] | select(.ParameterKey=="EnableForge")|.ParameterValue')
+              - echo $FORGEENABLED
               - aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.' | grep StackName
               # did backmack get "Create_Complete"?
               - aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.' | grep StackName | grep Backmac
-              # whats mackmac stack called ?
-              - export BACKMACSTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Backmac"))|.StackName')
+              # whats ackmac stack called ?
+              - if [ "${BACKMACENABLED}" = "true" ]; then export BACKMACSTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Backmac"))|.StackName');fi
               # is bastion listening for ssh ?
               - export BASTIONSTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Bastion"))|.StackName')
               - export BASTIONIP=$(aws cloudformation describe-stacks --stack-name=$BASTIONSTACK | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="BastionPubIp")|.OutputValue'|tr -d '"')
               - echo $BASTIONIP
               - nc -n -w3 -z $BASTIONIP 22
               # did forge come up ?
-              - export FORGESTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Forge"))|.StackName')
-              - export FORGEURL=$(aws cloudformation describe-stacks --stack-name=$FORGESTACK | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="ServiceURL")|.OutputValue'|tr -d '"')
+              - if [ "${FORGEENABLED}" = "true" ]; then export FORGESTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Forge"))|.StackName');fi
+              - if [ "${FORGEENABLED}" = "true" ]; then export FORGEURL=$(aws cloudformation describe-stacks --stack-name=$FORGESTACK | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="ServiceURL")|.OutputValue'|tr -d '"');fi
               - echo $FORGEURL
-              - export FORGEELBNAME=$(aws elb describe-load-balancers | jq '.LoadBalancerDescriptions'|jq '.[]'|jq '.LoadBalancerName'|grep Forge|tr -d '"')
+              - if [ "${FORGEENABLED}" = "true" ]; then export FORGEELBNAME=$(aws elb describe-load-balancers | jq '.LoadBalancerDescriptions'|jq '.[]'|jq '.LoadBalancerName'|grep Forge|tr -d '"');fi
               - echo "${FORGEELBNAME}"
-              - aws elb wait any-instance-in-service --load-balancer-name $FORGEELBNAME
-              - curl --fail ${FORGEURL}/status
+              - if [ "${FORGEENABLED}" = "true" ]; then aws elb wait any-instance-in-service --load-balancer-name $FORGEELBNAME;fi
+              - if [ "${FORGEENABLED}" = "true" ]; then curl --fail ${FORGEURL}/status;fi
         - step:
             name: Cleanup Atlassian Services Stack
             trigger: manual
