--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,10 +20,10 @@ pipelines:
               #- cd ami
               #- ./bin/build-ami.sh -p JIRA      -r us-east-1 -v ${CI_VPC_ID} -s ${CI_SUBNET_ID} -c
               # test to determine MASTERSTACK
-              - export MASTERSTACK=$(aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE UPDATE_COMPLETE | jq '.StackSummaries'|jq -r '.[]| select(.TemplateDescription=="Master Template for Atlassian Services")|.StackName')
+              - export MASTERSTACK=$(aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]| select(.TemplateDescription=="Master Template for Atlassian Services")|.StackName')
               - if [ -x "${MASTERSTACK}"]; then MASTERSTACK="ATL";fi
               - echo $MASTERSTACK
-              - if aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE UPDATE_COMPLETE | grep StackName|grep "\"${MASTERSTACK}\""; then touch vpcExists; fi
+              - if aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | grep StackName|grep "\"${MASTERSTACK}\""; then touch vpcExists; fi
               - ls
               - aws s3 cp quickstarts/quickstart-for-atlassian-services.yaml s3://${CI_S3_OUTPUT_BUCKET}/quickstarts/quickstart-for-atlassian-services.yaml
               - aws cloudformation validate-template --template-url https://s3.amazonaws.com/${CI_S3_OUTPUT_BUCKET}/quickstarts/quickstart-for-atlassian-services.yaml
@@ -40,18 +40,18 @@ pipelines:
               - echo $BACKMACENABLED
               - export FORGEENABLED=$(aws cloudformation describe-stacks --stack-name="${MASTERSTACK}"|jq '.Stacks[0].Parameters' | jq '.[] | select(.ParameterKey=="EnableForge")|.ParameterValue')
               - echo $FORGEENABLED
-              - aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.' | grep StackName
+              - aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.' | grep StackName
               # did backmack get "Create_Complete"?
-              - aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.' | grep StackName | grep Backmac
+              - aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.' | grep StackName | grep Backmac
               # whats ackmac stack called ?
-              - if [ "${BACKMACENABLED}" = "true" ]; then export BACKMACSTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Backmac"))|.StackName');fi
+              - if [ "${BACKMACENABLED}" = "true" ]; then export BACKMACSTACK=$(aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Backmac"))|.StackName');fi
               # is bastion listening for ssh ?
-              - export BASTIONSTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Bastion"))|.StackName')
+              - export BASTIONSTACK=$(aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Bastion"))|.StackName')
               - export BASTIONIP=$(aws cloudformation describe-stacks --stack-name=$BASTIONSTACK | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="BastionPubIp")|.OutputValue'|tr -d '"')
               - echo $BASTIONIP
               - nc -n -w3 -z $BASTIONIP 22
               # did forge come up ?
-              - if [ "${FORGEENABLED}" = "true" ]; then export FORGESTACK=$(aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Forge"))|.StackName');fi
+              - if [ "${FORGEENABLED}" = "true" ]; then export FORGESTACK=$(aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]|select(.StackName | contains("Forge"))|.StackName');fi
               - if [ "${FORGEENABLED}" = "true" ]; then export FORGEURL=$(aws cloudformation describe-stacks --stack-name=$FORGESTACK | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="ServiceURL")|.OutputValue'|tr -d '"');fi
               - echo $FORGEURL
               - if [ "${FORGEENABLED}" = "true" ]; then export FORGEELBNAME=$(aws elb describe-load-balancers | jq '.LoadBalancerDescriptions'|jq '.[]'|jq '.LoadBalancerName'|grep Forge|tr -d '"');fi
@@ -72,5 +72,5 @@ pipelines:
               - aws configure set default.region us-east-2
               - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
-              - export MASTERSTACK=$(aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE UPDATE_COMPLETE | jq '.StackSummaries'|jq -r '.[]| select(.TemplateDescription=="Master Template for Atlassian Services")|.StackName')
+              - export MASTERSTACK=$(aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE UPDATE_COMPLETE" | jq '.StackSummaries'|jq -r '.[]| select(.TemplateDescription=="Master Template for Atlassian Services")|.StackName')
               - aws cloudformation delete-stack --stack-name $MASTERSTACK
